[package]
name = "cargo-restore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo = "0.76.0"
clap = { version = "4.4.16", features = ["derive"] }
semver = "1.0.21"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
yoke = { version = "0.7.3", features = ["derive"] }
