[package]
name = "cargo-restore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
cargo = "0.77.0"
clap = { version = "4.5.0", features = ["derive"] }
semver = "1.0.21"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
yoke = { version = "0.7.3", features = ["derive"] }
anstyle = "1.0.6"

[features]
vendored = ["cargo/all-static"]
