[package]
name = "cargo-restore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
cargo = "0.84.0"
clap = { version = "4.5.4", features = ["derive"] }
semver = "1.0.23"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
yoke = { version = "0.7.3", features = ["derive"] }
anstyle = "1.0.7"

[features]
vendored = ["cargo/all-static"]
